--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "hct.name" . }}-deploy
+  name: {{ include "app.name" . }}-deploy
   labels:
-    {{- include "hct.labels" . | nindent 4 }}
+    {{- include "app.labels" . | nindent 4 }}
 spec:
 {{- if not .Values.autoscaling.enabled }}
   replicas: {{ include "replicaCount" . }}
 {{- end }}
   selector:
     matchLabels:
-      {{- include "hct.selectorLabels" . | nindent 6 }}
+      {{- include "app.selectorLabels" . | nindent 6 }}
   template:
     metadata:
     {{- with .Values.podAnnotations }}
@@ -18,32 +18,32 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       labels:
-        {{- include "hct.selectorLabels" . | nindent 8 }}
+        {{- include "app.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "hct.serviceAccountName" . }}
+      serviceAccountName: {{ include "app.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{ if .Values.init_containers.enabled }}
       initContainers:
-        - name: {{ include "hct.name" .}}-init
+        - name: {{ include "app.name" .}}-init
           image: "{{ .Values.init_containers.repository }}/{{ .Values.init_containers.image }}:{{ .Values.init_containers.tag }}"
           imagePullPolicy: {{ .Values.init_containers.pullPolicy }}
           command: {{ .Values.init_containers.command }}
           {{- with .Values.init_containers.env }}
           env:
-          {{ tpl . $ | nindent 12 }}
+          {{- tpl . $ | nindent 12 }}
           {{- end -}}
       {{ end }}
       containers:
-        - name: {{ include "hct.name" .}}
+        - name: {{ include "app.name" .}}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.containers.image.repository }}:{{ .Values.containers.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.containers.image.pullPolicy }}
+          image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
               containerPort: 80
@@ -58,6 +58,10 @@ spec:
               port: http
           resources:
             {{- include "resources" . }}
+          volumeMounts:
+            {{- include "volumeMounts" . | nindent 10 }}
+      volumes:
+        {{- include "volumes" . | nindent 8}}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
