--- a/templates/hpa.yaml
+++ b/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "hct.name" . }}-hpa
+  name: {{ include "app.name" . }}-hpa
   labels:
-    {{- include "hct.labels" . | nindent 4 }}
+    {{- include "app.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "hct.name" . }}-deploy
+    name: {{ include "app.name" . }}-deploy
   minReplicas: {{ include "minReplicas" .  }}
   maxReplicas: {{ include "maxReplicas" .  }}
   metrics:
