secrets and certs encoding fix

--- a/templates/secrets-certs.yaml
+++ b/templates/secrets-certs.yaml
@@ -10,14 +10,18 @@ metadata:
     {{- include "app.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- $root := . }}
-  {{- if .Values.certs.resources -}}
-  {{- range .Values.certs.resources }}
+{{- $root := . }}
+{{- if .Values.certs.resources -}}
+{{- range .Values.certs.resources }}
   {{ .name }}: |-
-  {{ $path := printf "%s/%s/%s" $.Values.certs.srcPath $env .name }}
-  {{ $root.Files.Get $path  | indent 6 }}
-  {{- end }}
-  {{- else }}
-  {{ ($certfiles).AsSecrets | nindent 4 }}
-  {{- end -}}
-{{- end -}}
+{{ $path := printf "%s/%s/%s" $.Values.certs.srcPath $env .name }}
+{{ $root.Files.Get $path  |b64enc | indent 6 }}
+{{- end }}
+{{- else }}
+{{ $path := printf "%s/%s/%s" $.Values.certs.srcPath $env .name }}
+{{- range $name, $bytes := .Files.Glob $path }}
+  {{ base $name }}: |-
+{{ $root.Files.Get $name | b64enc |  indent 6 }}
+{{- end }}
+{{- end }}
+{{- end }}
