--- a/templates/secrets-creds.yaml
+++ b/templates/secrets-creds.yaml
@@ -10,14 +10,19 @@ metadata:
     {{- include "app.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- $root := . }}
-  {{- if .Values.secrets.resources -}}
-  {{- range .Values.secrets.resources }}
+{{- $root := . }}
+{{- if .Values.secrets.resources -}}
+{{- range .Values.secrets.resources }}
   {{ .name }}: |-
-  {{ $path := printf "%s/%s/%s" $.Values.secrets.srcPath $env .name }}
-  {{ $root.Files.Get $path  | indent 6 }}
-  {{- end }}
-  {{- else }}
-  {{- ($secretfiles).AsSecrets | nindent 4 }}
-  {{ end }}
+{{ $path := printf "%s/%s/%s" $.Values.secrets.srcPath $env .name }}
+{{ $root.Files.Get $path |b64enc  | indent 6 }}
+{{- end }}
+{{- else }}
+{{ $path := printf "%s/%s/*" $.Values.secrets.srcPath $env }}
+{{- range $name, $bytes := .Files.Glob $path }}
+  {{ base $name }}: |-
+{{ $root.Files.Get $name |b64enc  | indent 6 }}
+{{- end }}
+{{- end }}
 {{- end -}}
+
