--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
           image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom:
-          {{ include "env-vars"  . | nindent 12 }}
+          {{- include "env-vars"  . | nindent 12 }}
           ports:
             - name: http
               containerPort: 80
