--- a/templates/secrets-certs.yaml
+++ b/templates/secrets-certs.yaml
@@ -13,15 +13,19 @@ data:
 {{- $root := . }}
 {{- if .Values.certs.resources -}}
 {{- range .Values.certs.resources }}
+  {{ if eq .mountAs "file" }}
   {{ .name }}: |-
 {{ $path := printf "%s/%s/%s" $.Values.certs.srcPath $env .name }}
 {{ $root.Files.Get $path  |b64enc | indent 6 }}
+  {{ end }}
 {{- end }}
 {{- else }}
 {{ $path := printf "%s/%s/%s" $.Values.certs.srcPath $env .name }}
 {{- range $name, $bytes := .Files.Glob $path }}
+  {{ if eq .mountAs "file" }}
   {{ base $name }}: |-
 {{ $root.Files.Get $name | b64enc |  indent 6 }}
+  {{ end }}
 {{- end }}
 {{- end }}
 {{- end }}
