configmap and secrets issues fixed

--- a/templates/secrets-creds-env-vars.yaml
+++ b/templates/secrets-creds-env-vars.yaml
@@ -1,7 +1,7 @@
 {{- $env := .Values.env -}}
 {{- $path := printf "%s/%s/*" .Values.secrets.srcPath .Values.env -}}
 {{- $secretfiles := .Files.Glob $path -}}
-{{- if and (.Values.secrets.enabled) ($secretfiles) -}}
+{{- if and (.Values.secrets.enabled) .Values.secrets.resources -}}
 apiVersion: v1
 kind: Secret
 metadata:
