--- a/templates/secrets-creds.yaml
+++ b/templates/secrets-creds.yaml
@@ -13,9 +13,11 @@ data:
 {{- $root := . }}
 {{- if .Values.secrets.resources -}}
 {{- range .Values.secrets.resources }}
+{{- if eq .mountAs "file" }}
   {{ .name }}: |-
 {{ $path := printf "%s/%s/%s" $.Values.secrets.srcPath $env .name }}
 {{ $root.Files.Get $path |b64enc  | indent 6 }}
+{{- end -}}
 {{- end }}
 {{- else }}
 {{ $path := printf "%s/%s/*" $.Values.secrets.srcPath $env }}
