--- a/templates/configmap-env-vars.yaml
+++ b/templates/configmap-env-vars.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.config.enabled -}}
+{{- if and .Values.config.enabled .Values.config.resources -}}
 {{- $basePath := .Values.config.srcPath -}}
 apiVersion: v1
 kind: ConfigMap
