--- a/resources/config/dev/esb.properties
+++ b/resources/config/dev/esb.properties
@@ -1,4 +1,4 @@
 esb.environmnet=sit
-esb.queue.name=test.solace-incoming
-esb.topic.name=test.mq-outbound
+esb.queue.name=test.queue
+esb.topic.name=test.topic
 esb.code=idmk01
